# sre-design

./: .gitignore  .secrets.baseline  CLAUDE.md  Makefile  README.md  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: sre-analyst.agent.md  sre-oncall.agent.md  sre-target-scan.agent.md
.github/prompts/: alert.prompt.md  autopilot.prompt.md  flow.prompt.md  runbook.prompt.md
.github/skills/: pipeline.yaml
.github/skills/generate-alerts/: SKILL.md
.github/skills/generate-runbooks/: SKILL.md
.github/skills/map-api-contracts/: SKILL.md
.github/skills/map-architecture/: SKILL.md
.github/skills/map-messaging/: SKILL.md
.github/skills/sre-assess-logging/: SKILL.md
.github/skills/sre-autopilot/: SKILL.md
.github/skills/sre-blast-radius/: SKILL.md
.github/skills/sre-confirm-boundaries/: SKILL.md
.github/skills/sre-criticality/: SKILL.md
.github/skills/sre-discover-areas/: SKILL.md
.github/skills/sre-estate/: SKILL.md
.github/skills/sre-flow-analysis/: SKILL.md
.github/skills/sre-gap-finder/: SKILL.md
.github/skills/sre-generate-dashboards/: SKILL.md
.github/skills/sre-generate-slos/: SKILL.md
.github/skills/sre-incident-response/: SKILL.md
.github/skills/sre-narrate-diagrams/: SKILL.md
.github/skills/sre-observability-coverage/: SKILL.md
.github/skills/sre-pcf-review/: SKILL.md
.github/skills/sre-prr-review/: SKILL.md
.github/skills/sre-security-posture/: SKILL.md
.github/workflows/: ci.yml
config/: default.yaml
docs/: DEEP-COMPARISON-2026-06-07.md  DEEP-COMPARISON-2026-06-09.md  DESIGN.md  HYBRID-PLAN.md  NEXT-INCREMENTS.md  PHASE-1-HARDENING.md  PHASE-2-TRUST-SPINE.md  PHASE-4-GAP-FINDER.md  REASSESSMENT-2026-06-07-round3.md  REASSESSMENT-2026-06.md  RESILIENCY-SKILLS-REVIEW-2026-06.md  SCHEMA-REFERENCE.md  SCOPE-AND-COVERAGE.md  VERTEX-LLM-PROVIDER-CASE.md
schemas/: _envelope.schema.json  registry.yaml
schemas/v1alpha1/: Alert.schema.json  Architecture.schema.json  BlastRadius.schema.json  ConfigManagement.schema.json  Criticality.schema.json  Dashboard.schema.json  DataStore.schema.json  DeliveryPipeline.schema.json  Dependency.schema.json  Deployment.schema.json  DrBackup.schema.json  Fallback.schema.json  Flow.schema.json  Interface.schema.json  Observability.schema.json  ReadinessScore.schema.json  ResiliencyGap.schema.json  ResiliencyPattern.schema.json  Runbook.schema.json  ServiceCatalogEntry.schema.json  SloSli.schema.json  TechStack.schema.json  Topology.schema.json
scripts/: build-offline.sh
src/sre_kb/: __init__.py  cli.py  clone.py  config.py  inventory_signatures.py  registry.py  scan_plan.py  signatures.py  taxonomy.py  tiers.py  util.py
src/sre_kb/collectors/: __init__.py  base.py
src/sre_kb/data/: default.yaml
src/sre_kb/drift/: __init__.py  diff.py
src/sre_kb/estate/: __init__.py  runner.py  topology.py
src/sre_kb/eval/: __init__.py  scorecard.py
src/sre_kb/flow/: __init__.py  budget_check.py
src/sre_kb/graduation/: __init__.py  state.py
src/sre_kb/llm/: __init__.py  provider.py
src/sre_kb/models/: __init__.py  envelope.py  facts.py
src/sre_kb/parsing/: __init__.py  code_model.py
src/sre_kb/pipeline/: __init__.py  alerts_draft.py  architecture.py  areas.py  autopilot.py  challenge_apply.py  challenge_run.py  (+9 more)
tests/: test_adversarial.py  test_adversarial_llm.py  test_alert_adapters.py  test_automation_loop.py  test_autopilot.py  test_build.py  test_burn_rate_expr.py  test_cf_env.py  test_challenge.py  test_challenge_loop.py  test_challenge_run.py  test_cli.py  test_clone.py  test_code_model.py  test_confidence.py  test_config_props.py  test_confirm.py  test_confirm_e2e.py  test_copilot_gap_validation.py  test_criticality.py  test_dashboards.py  test_diagram_narration.py  test_diagrams.py  test_discover_areas.py  test_dotnet.py  test_drift.py  test_e2e_scan.py  test_envelope_schema.py  test_estate.py  test_eval_scorecard.py  test_facts.py  test_feature_flags.py  test_findings.py  test_flow_correlation.py  test_forge.py  test_gap_finder.py  test_generate_alerts.py  test_generate_runbooks.py  test_go_net.py  test_golden_corpus.py  (+51 more)
tools/: gen_schema_ref.py  lint_skills.py
(+239 files in other folders)
