[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-kb"
version = "0.0.1"
description = "Deterministic engine that turns a code repo into a populated, validated SRE knowledge base + GitHub Copilot skills."
readme = "README.md"
# Floor stays 3.11 for now (no 3.12+ syntax is used yet); 3.13 is the working/dev base and is
# tested in CI. Intent is to raise this floor to >=3.13 once we adopt 3.12+ features (PEP 695, etc.).
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "jinja2>=3.1",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
sre-kb = "sre_kb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Schemas, the default config, and the render templates ship inside the package so a
# wheel-installed engine resolves them at runtime.
sre_kb = ["schemas/*.json", "schemas/*.yaml", "schemas/**/*.json", "data/*.yaml", "render/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
