[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-kb"
version = "0.0.1"
description = "Deterministic engine that turns a code repo into a populated, validated SRE knowledge base + GitHub Copilot skills."
readme = "README.md"
# 3.13 is the floor: the working/dev base, what CI tests, and what the code targets (PEP 695 type
# statements; ruff infers its target from this).
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "jinja2>=3.1",
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.23",
]

[project.optional-dependencies]
# pytest-cov: the CI coverage floor; hypothesis: property tests over the parser-shaped
# helpers (slug/duration/secret-scan) whose input domain is untrusted text.
dev = ["pytest>=8.0", "ruff>=0.4", "pytest-cov>=5.0", "hypothesis>=6.100"]

[project.scripts]
sre-kb = "sre_kb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Schemas, the default config, and the render templates ship inside the package so a
# wheel-installed engine resolves them at runtime.
sre_kb = ["schemas/*.json", "schemas/*.yaml", "schemas/**/*.json", "data/*.yaml", "render/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
